@@ -33,4 +33,6 @@ Library:     collections
 - (void)catUnsignedShort: (unsigned short)usht;
 - (void)catLong: (long)lng;
 - (void)catUnsignedLong: (unsigned long)ulng;
+- (void)catLongLong: (long long)lnglng;
+- (void)catUnsignedLongLong: (unsigned long long)ulnglng;
 @end
